inbox css (mobile, tablet,desktop) css is done but need to revise to fix the cutting off of content with overflow scroll

--- a/Client/src/Components/Navbar/_Navbar-mobile.scss
+++ b/Client/src/Components/Navbar/_Navbar-mobile.scss
@@ -31,6 +31,7 @@
     border-radius: 4px;
     color: white;
     cursor: pointer;
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
     i {
       font-size: 1.5rem;
       padding: 4px;
