--- a/Client/src/Routes/Inbox/_Inbox-mobile.scss
+++ b/Client/src/Routes/Inbox/_Inbox-mobile.scss
@@ -2,7 +2,6 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: red;
 
   .inbox-content-container {
     display: flex;
@@ -16,20 +15,49 @@
       width: 100%;
       height: 100%;
       background-color: white;
-    //   background: linear-gradient(180deg, rgba(0, 51, 102, 0.92) 0%, rgba(0, 102, 204, 0.92) 100%);
+      //   background: linear-gradient(180deg, rgba(0, 51, 102, 0.92) 0%, rgba(0, 102, 204, 0.92) 100%);
       box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-      .inbox-search {
+      .input-container {
         display: flex;
-        background-color: rgba(211, 211, 211, 0.445);
-        flex-direction: column;
-        width: 70%;
-        height: 1.25rem;
-        margin-top: 4rem;
-        padding-left: 2rem;
-        border-radius: 1rem;
-        border: none;
-        box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+        justify-content: center;
+        align-items: center;
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+        width: 100%;
+        height: fit-content;
+        gap: 0.5rem;
+        .draft-msg-btn {
+          display: flex;
+          width: fit-content;
+          height: fit-content;
+          font-size: 1.75rem;
+          background-color: transparent;
+          cursor: pointer;
+          border-radius: 100%;
+          border: none;
+          color: #003366;
+          padding: 0;
+          transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+
+          &:hover {
+            color: greenyellow;
+          }
+        }
+        .inbox-search {
+          display: flex;
+          background-color: rgba(211, 211, 211, 0.445);
+          flex-direction: column;
+          width: 70%;
+          height: 1.5rem;
+          padding-left: 1rem;
+          border-radius: 1rem;
+          border: none;
+          box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
+        input:focus {
+          outline: none;
+        }
       }
     }
     .inbox-panel {
@@ -37,6 +65,46 @@
       width: 100%;
       height: 100%;
       display: none;
+    }
+  }
+}
+
+// Notification Tile CSS
+//! need to figure out whats wrong with the div in overflow cutting off content
+.notification-tile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30rem;
+  overflow-y: auto;
+  gap: 1rem;
+  .notification-tile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    height: fit-content;
+    padding: 16px;
+    width: 80%;
+    background-color: #003366;
+    color: white;
+    border-radius: 8px;
+    font-family: "Inter", sans-serif;
+    font-size: 12pt;
+    .tile-username {
+      color: greenyellow;
+      font-weight: bold;
+    }
+    .placeholder {
+      width: 2.5rem;
+      height: 2.5rem;
+      background-color: whitesmoke;
+      border-radius: 100%;
+    }
+    .tile-content {
+      width: 80%;
     }
   }
 }
